packagelon com.twittelonr.follow_reloncommelonndations.common.candidatelon_sourcelons.uselonr_uselonr_graph

import com.twittelonr.finaglelon.stats.Countelonr
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.follow_reloncommelonndations.common.constants.GuicelonNamelondConstants
import com.twittelonr.follow_reloncommelonndations.common.modelonls._
import com.twittelonr.helonrmit.modelonl.Algorithm
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.candidatelon_sourcelon.CandidatelonSourcelon
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.CandidatelonSourcelonIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonquelonst.HasClielonntContelonxt
import com.twittelonr.reloncos.reloncos_common.thriftscala.UselonrSocialProofTypelon
import com.twittelonr.reloncos.uselonr_uselonr_graph.thriftscala.ReloncommelonndUselonrDisplayLocation
import com.twittelonr.reloncos.uselonr_uselonr_graph.thriftscala.ReloncommelonndUselonrRelonquelonst
import com.twittelonr.reloncos.uselonr_uselonr_graph.thriftscala.ReloncommelonndUselonrRelonsponselon
import com.twittelonr.reloncos.uselonr_uselonr_graph.thriftscala.ReloncommelonndelondUselonr
import com.twittelonr.stitch.Stitch
import com.twittelonr.strato.clielonnt.Felontchelonr
import com.twittelonr.timelonlinelons.configapi.HasParams
import javax.injelonct.Injelonct
import javax.injelonct.Namelond
import javax.injelonct.Singlelonton

@Singlelonton
class UselonrUselonrGraphCandidatelonSourcelon @Injelonct() (
  @Namelond(GuicelonNamelondConstants.USelonR_USelonR_GRAPH_FelonTCHelonR)
  felontchelonr: Felontchelonr[ReloncommelonndUselonrRelonquelonst, Unit, ReloncommelonndUselonrRelonsponselon],
  statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds CandidatelonSourcelon[
      UselonrUselonrGraphCandidatelonSourcelon.Targelont,
      CandidatelonUselonr
    ] {

  ovelonrridelon val idelonntifielonr: CandidatelonSourcelonIdelonntifielonr = UselonrUselonrGraphCandidatelonSourcelon.Idelonntifielonr
  val stats: StatsReloncelonivelonr = statsReloncelonivelonr.scopelon("UselonrUselonrGraph")
  val relonquelonstCountelonr: Countelonr = stats.countelonr("relonquelonsts")

  ovelonrridelon delonf apply(
    targelont: UselonrUselonrGraphCandidatelonSourcelon.Targelont
  ): Stitch[Selonq[CandidatelonUselonr]] = {
    if (targelont.params(UselonrUselonrGraphParams.UselonrUselonrGraphCandidatelonSourcelonelonnablelondInWelonightMap)) {
      relonquelonstCountelonr.incr()
      buildReloncommelonndUselonrRelonquelonst(targelont)
        .map { relonquelonst =>
          felontchelonr
            .felontch(relonquelonst)
            .map(_.v)
            .map { relonsponselonOpt =>
              relonsponselonOpt
                .map { relonsponselon =>
                  relonsponselon.reloncommelonndelondUselonrs
                    .sortBy(-_.scorelon)
                    .map(convelonrtToCandidatelonUselonrs)
                    .map(_.withCandidatelonSourcelon(idelonntifielonr))
                }.gelontOrelonlselon(Nil)
            }
        }.gelontOrelonlselon(Stitch.Nil)
    } elonlselon {
      Stitch.Nil
    }
  }

  privatelon[this] delonf buildReloncommelonndUselonrRelonquelonst(
    targelont: UselonrUselonrGraphCandidatelonSourcelon.Targelont
  ): Option[ReloncommelonndUselonrRelonquelonst] = {
    (targelont.gelontOptionalUselonrId, targelont.reloncelonntFollowelondUselonrIds) match {
      caselon (Somelon(uselonrId), Somelon(reloncelonntFollowelondUselonrIds)) =>
        // uselon reloncelonntFollowelondUselonrIds as selonelonds for initial elonxpelonrimelonnt
        val selonelondsWithWelonights: Map[Long, Doublelon] = reloncelonntFollowelondUselonrIds.map {
          reloncelonntFollowelondUselonrId =>
            reloncelonntFollowelondUselonrId -> UselonrUselonrGraphCandidatelonSourcelon.DelonfaultSelonelondWelonight
        }.toMap
        val relonquelonst = ReloncommelonndUselonrRelonquelonst(
          relonquelonstelonrId = uselonrId,
          displayLocation = UselonrUselonrGraphCandidatelonSourcelon.DisplayLocation,
          selonelondsWithWelonights = selonelondsWithWelonights,
          elonxcludelondUselonrIds = Somelon(targelont.elonxcludelondUselonrIds),
          maxNumRelonsults = Somelon(targelont.params.gelontInt(UselonrUselonrGraphParams.MaxCandidatelonsToRelonturn)),
          maxNumSocialProofs = Somelon(UselonrUselonrGraphCandidatelonSourcelon.MaxNumSocialProofs),
          minUselonrPelonrSocialProof = Somelon(UselonrUselonrGraphCandidatelonSourcelon.MinUselonrPelonrSocialProof),
          socialProofTypelons = Somelon(Selonq(UselonrUselonrGraphCandidatelonSourcelon.SocialProofTypelon))
        )
        Somelon(relonquelonst)
      caselon _ => Nonelon
    }
  }

  privatelon[this] delonf convelonrtToCandidatelonUselonrs(
    reloncommelonndelondUselonr: ReloncommelonndelondUselonr
  ): CandidatelonUselonr = {
    val socialProofUselonrIds =
      reloncommelonndelondUselonr.socialProofs.gelontOrelonlselon(UselonrUselonrGraphCandidatelonSourcelon.SocialProofTypelon, Nil)
    val relonasonOpt = if (socialProofUselonrIds.nonelonmpty) {
      Somelon(
        Relonason(
          Somelon(AccountProof(followProof =
            Somelon(FollowProof(socialProofUselonrIds, socialProofUselonrIds.sizelon)))))
      )
    } elonlselon {
      Nonelon
    }
    CandidatelonUselonr(
      id = reloncommelonndelondUselonr.uselonrId,
      scorelon = Somelon(reloncommelonndelondUselonr.scorelon),
      relonason = relonasonOpt)
  }
}

objelonct UselonrUselonrGraphCandidatelonSourcelon {
  typelon Targelont = HasParams
    with HasClielonntContelonxt
    with HasReloncelonntFollowelondUselonrIds
    with HaselonxcludelondUselonrIds

  val Idelonntifielonr: CandidatelonSourcelonIdelonntifielonr = CandidatelonSourcelonIdelonntifielonr(
    Algorithm.UselonrUselonrGraph.toString)
  //Uselon HomelonTimelonlinelon for elonxpelonrimelonnt
  val DisplayLocation: ReloncommelonndUselonrDisplayLocation = ReloncommelonndUselonrDisplayLocation.HomelonTimelonLinelon

  //Delonfault params uselond in MagicReloncs
  val DelonfaultSelonelondWelonight: Doublelon = 1.0
  val SocialProofTypelon = UselonrSocialProofTypelon.Follow
  val MaxNumSocialProofs = 10
  val MinUselonrPelonrSocialProof: Map[UselonrSocialProofTypelon, Int] =
    Map[UselonrSocialProofTypelon, Int]((SocialProofTypelon, 2))
}
